<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".P2.Calc_p2b">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:padding="20dp"
        android:text="@string/title_p2b"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/number_1"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/lightBlue"
        android:ems="10"
        android:hint="@string/num1_hint_p2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <EditText
        android:id="@+id/number_2"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/lightBlue"
        android:ems="10"
        android:hint="@string/num2_hint_p2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="301dp"
        android:layout_height="273dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833">

        <Button
            android:id="@+id/add_button"
            style="@style/ButtonStyle"
            android:layout_marginStart="28dp"
            android:text="@string/plus_p2b"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.104" />

        <Button
            android:id="@+id/sub_button"
            style="@style/ButtonStyle"
            android:layout_marginEnd="16dp"
            android:text="@string/minus_p2b"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.753"
            app:layout_constraintStart_toEndOf="@+id/add_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.104" />

        <Button
            android:id="@+id/mul_button"
            style="@style/ButtonStyle"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:text="@string/multiply_p2b"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_button"
            app:layout_constraintVertical_bias="0.157" />

        <Button
            android:id="@+id/div_button"
            style="@style/ButtonStyle"
            android:text="@string/divide_p2b"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.575"
            app:layout_constraintStart_toEndOf="@+id/mul_button"
            app:layout_constraintTop_toBottomOf="@+id/sub_button"
            app:layout_constraintVertical_bias="0.709" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/ans_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/design_default_color_error"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />


</androidx.constraintlayout.widget.ConstraintLayout>