<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".P21.getUserData_p21">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkOrange"
        android:padding="20dp"
        android:text="@string/title2_p21"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:inputType="text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/etName_p21"
        android:textSize="20sp"
        android:backgroundTint="@color/darkOrange"
        android:hint="@string/nameHint_p21"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        android:importantForAutofill="no" />

    <EditText
        android:inputType="text"
        android:id="@+id/etId_p21"
        android:textSize="20sp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkOrange"
        android:hint="@string/idNoHint_p21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etBranch_p21"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/branchHint_p21"
        android:inputType="text"
        android:textSize="20sp"
        android:backgroundTint="@color/darkOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        android:importantForAutofill="no"/>

    <Spinner
        android:id="@+id/spLanguage_p21"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:backgroundTint="@color/darkOrange"
        android:entries="@array/listOptions_p21"
        android:entryValues="@array/listValues_p21"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <Button
        android:id="@+id/btnSave_p21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave_p21"
        android:backgroundTint="@color/darkOrange"
        android:paddingVertical="15dp"
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />
</androidx.constraintlayout.widget.ConstraintLayout>